--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,3 +8,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set-option -g status-bg "color198"
+set-option -g status-fg "color255"
+
+set-option -g status-right "#[fg=colour255,bg=colour241] #h | #(date --iso-8601=seconds) #[default]"
