[add] vim keybind

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,3 +15,5 @@ set-option -g status-bg "color198"
 set-option -g status-fg "color255"
 
 set-option -g status-right "#[fg=colour255,bg=colour241] #h | #(date --iso-8601=seconds) #[default]"
+
+set-window-option -g mode-keys vi
