修正(.tmux.conf): '='キーのバインドをコピー・モードに変更 新機能(.tmux.conf): '='キーのバインド解除とコピー・モードの追加

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,9 @@ unbind C-b
 bind - split-window -v
 bind / split-window -h
 
+unbind-key =
+bind-key = copy-mode
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
