--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,7 @@ set -g default-command "${SHELL}"
 
 set -g prefix C-p
 unbind C-b
+bind C-p send-prefix
 
 bind - split-window -v
 bind / split-window -h
@@ -19,4 +20,6 @@ set-option -g status-fg "color255"
 
 set-option -g status-right "#[fg=colour255,bg=colour241] #h | #(date --iso-8601=seconds) #[default]"
 
-set-window-option -g mode-keys vi
+set -g mode-keys vi
+set -g status-keys vi
+
