--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,19 +1,21 @@
 set -g default-command "${SHELL}"
 
-set -g prefix C-p
+set -g prefix C-j
 unbind C-b
-bind C-p send-prefix
+bind C-j send-prefix
 
 bind - split-window -v
 bind / split-window -h
 
+bind C-u copy-mode
+
 unbind-key =
 bind-key = copy-mode
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
 
 set-option -g status-bg "color198"
 set-option -g status-fg "color255"
