--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,9 +13,11 @@ unbind-key =
 bind-key = copy-mode
 
 bind C-h select-pane -L
-bind C-j select-pane -D
+# bind C-j select-pane -D
 bind C-k select-pane -U
 bind C-l select-pane -R
+bind C-j select-pane -t :.+
+bind C-z resize-pane -Z
 
 set-option -g status-bg "color198"
 set-option -g status-fg "color255"
