much history-limit

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,3 +40,5 @@ set -g pane-border-style 'fg=#252530,bg=color000'
 set -g pane-border-lines heavy
 set -g pane-border-status top
 set -g pane-border-format " #{pane_current_path} | #{pane_current_command} "
+
+set-option -g history-limit 65535
