Update .config/sway/config Update .wezterm.lua

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -15,7 +15,7 @@ set $right l
 # Your preferred terminal emulator
 set $term wezterm
 # Your preferred application launcher
-set $menu wmenu-run
+set $menu rofi -show drun
 
 default_border none 
 
@@ -157,7 +157,7 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+f fullscreen
 
     # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
+    # bindsym $mod+Shift+space floating toggle
 
     # Swap focus between the tiling area and the floating area
     bindsym $mod+space focus mode_toggle
@@ -275,6 +275,7 @@ bindsym $mod+t exec "swaymsg '[app_id=org.wezfurlong.wezterm] scratchpad show; [
 # auto startup 
 exec discord
 exec swaync
+exec 1password
 
 output "*" background ~/.config/sway/wallpaper.png fill
 
