--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -32,7 +32,8 @@ set-option -g status-right "#[fg=#1d1d26,bg=#1fd877] #h | #(date --iso-8601=seco
 set -g mode-keys vi
 set -g status-keys vi
 
-set -g pane-active-border-style 'fg=color015,bg=color000'
+set -g pane-active-border-style 'fg=#{?client_prefix,green,color015},bg=color000'
+
 set -g pane-border-style 'fg=#252530,bg=color000'
 
 set -g pane-border-lines heavy
