--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -18,8 +18,6 @@ bind C-l select-pane -R
 bind C-j select-pane -t :.+
 bind C-z resize-pane -Z
 
-bind-key C-n next-window
-
 bind-key C-x kill-pane
 
 set -g default-terminal "screen-256color"
@@ -58,6 +56,5 @@ bind-key b run-shell '\
     display-message "Background: Default"; \
   fi'
 
-# set-option -g window-active-style "bg=black" \; \
-# set-option -g @bg_mode "black" \; \
-# display-message "Background: Black"; \
+# 使わなさそうなキーバインドを無効化
+unbind m
