--- a/dot_config/i3status/config
+++ b/dot_config/i3status/config
@@ -15,7 +15,7 @@ general {
 order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
-order += "battery all"
+# order += "battery all"
 order += "disk /"
 order += "load"
 order += "memory"
@@ -40,7 +40,7 @@ disk "/" {
 }
 
 load {
-        format = "%1min"
+        format = "load: %1min"
 }
 
 memory {
