--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -17,7 +17,7 @@ set $term wezterm
 # Your preferred application launcher
 set $menu rofi -show drun
 
-default_border none 
+default_border pixel 2
 
 ### Output configuration
 #
@@ -271,6 +271,9 @@ for_window [app_id="org.wezfurlong.wezterm"] {
 
 client.focused #000000 #ff3399 #f8f8ff
 font pango:UDEV Gothic 35NF 10
+
+gaps outer 5
+gaps inner 5
 
 # F12キーでweztermをトグル表示
 bindsym $mod+t exec "swaymsg '[app_id=org.wezfurlong.wezterm] scratchpad show; [app_id=org.wezfurlong.wezterm] resize set width 98ppt height 98ppt; [app_id=org.wezfurlong.wezterm] move position 1ppt 1ppt'"
