--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -17,6 +17,8 @@ bind C-k select-pane -U
 bind C-l select-pane -R
 bind C-j select-pane -t :.+
 bind C-z resize-pane -Z
+bind C-c new-window
+
 
 bind-key C-x kill-pane
 
